--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <p>Telkom University - Bandung, Jawa Barat</p>
         <p>S1 Sistem Informasi</p>
         <p>inggitagranata22@gmail.com</p>
-        <img src="D:\DATA DATA\telkom university\pas foto.jpg" alt="Pas foto" width="10%">
+        <img src="pas foto.jpg" alt="Pas foto" width="10%">
     </header>
 
     <h2>RIWAYAT PENDIDIKAN</h2>
