--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     </head>
 <body>
     <header>
-        <h1>Inggit Yeira Budi Agranata</h1>
-        <p>Telkom University - Bandung, Jawa Barat</p>
-        <p>S1 Sistem Informasi</p>
-        <p>inggitagranata22@gmail.com</p>
-        <img src="pas foto.jpg" alt="Pas foto" width="10%">
+        <table>
+            <tr>
+                <td><h1>Inggit Yeira Budi Agranata</h1></td>
+                <td><img src="pas foto.jpg" alt="Pas foto" width="10%"></td>
+            </tr>
+        </table>
+
+        <ul>
+            <li>Instansi: Telkom University - Bandung, Jawa Barat</li>
+            <li>Jurusan: S1 Sistem Informasi</li>
+            <li>Email: inggitagranata22@gmail.com</li>
+        </ul>
     </header>
 
     <h2>RIWAYAT PENDIDIKAN</h2>
