--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     </head>
 <body>
     <header>
-        <h1>Inggit Yeira Budi Agranata</h1>
-        <img src="pas foto.jpg" alt="Pas foto" width="10%">
+        <h1 style="font-family: 'Times New Roman', Times, serif; font-size: 60px; background-color: beige; text-align: center;">Inggit Yeira Budi Agranata</h1>
+        <p style="text-align: center;"><img src="pas foto.jpg" alt="Pas foto" width="10%"></p>
     
-        <ul>
+        <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">BIODATA</h2>
+        <ul style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:black; text-align: justify;">
             <li>Instansi: Telkom University - Bandung, Jawa Barat</li>
             <li>Jurusan: S1 Sistem Informasi</li>
             <li>Email: inggitagranata22@gmail.com</li>
         </ul>
     </header>
 
-    <h2>RIWAYAT PENDIDIKAN</h2>
-    <table border="1px">
+    <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">RIWAYAT PENDIDIKAN</h2>
+    <table border="1px", style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:darkgray; text-align: center;">
         <tr>
             <th>Instansi</th>
             <th>Jurusan</th>
@@ -35,7 +36,7 @@
         </tr>
     </table>
 
-    <h2>PARAGRAF KARAKTER</h2>
-    <p>Saya berdedikasi untuk selalu memprioritaskan akademik serta sangat berambisi dalam mengejar prestasi-prestasi akademik, disamping itu juga saya sangat menyukai kerja sama tim, berbagai organisasi dan kepanitiaan aktif diikuti, saya juga dapat menempatkan diri baik sebagai pemimpin ataupun menjadi anggota yang dipimpin. Maka, dengan menggabungkan semangakt akademik dan keterampilan kerja sama tim yang telah saya kembangkan, saya berharap dapat berkontribusi untuk Telkom University</p>
+    <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">PARAGRAF KARAKTER</h2>
+    <p style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:black; text-align: justify;">Saya berdedikasi untuk selalu memprioritaskan akademik serta sangat berambisi dalam mengejar prestasi-prestasi akademik, disamping itu juga saya sangat menyukai kerja sama tim, berbagai organisasi dan kepanitiaan aktif diikuti, saya juga dapat menempatkan diri baik sebagai pemimpin ataupun menjadi anggota yang dipimpin. Maka, dengan menggabungkan semangakt akademik dan keterampilan kerja sama tim yang telah saya kembangkan, saya berharap dapat berkontribusi untuk Telkom University</p>
 </body>
 </html>
