--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <body>
     <header>
-        <h1 style="font-family: 'Times New Roman', Times, serif; font-size: 60px; background-color: beige; text-align: center;">Inggit Yeira Budi Agranata</h1>
+        <h1 style="font-family: 'Times New Roman', Times, serif; font-size: 60px; background-color: lightblue; text-align: center;">Inggit Yeira Budi Agranata</h1>
         <p style="text-align: center;"><img src="pas foto.jpg" alt="Pas foto" width="10%"></p>
     
         <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">BIODATA</h2>
@@ -16,8 +16,8 @@
     </header>
 
     <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">RIWAYAT PENDIDIKAN</h2>
-    <table border="1px", style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:darkgray; text-align: center;">
-        <tr>
+    <table border="1px", style="font-family: 'Times New Roman', Times, serif; font-size: 15px; width: 600px;text-align: center;">
+        <tr style="background-color: lightblue;">
             <th>Instansi</th>
             <th>Jurusan</th>
             <th>Periode</th>
