--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <html>
     <head>
         <title>CV INGGIT</title>
+        <style>
+            body {
+                background-color: lightgray;
+                font-family: 'Times New Roman', Times, serif;
+            }
+            h1 {
+                font-size: 60px;
+                text-align: center;
+            }
+            h2 {
+                font-size: 30px;
+            }
+            p{
+                font-size: 15px;
+                color: black;
+                text-align: justify;
+            }
+        </style>
     </head>
-<body style="background-color: lightgray;">
+<body>
     <header>
-        <h1 style="font-family: 'Times New Roman', Times, serif; font-size: 60px; background-color: lightblue; text-align: center;">Inggit Yeira Budi Agranata</h1>
+        <h1 style="background-color: lightblue;">Inggit Yeira Budi Agranata</h1>
         <p style="text-align: center;"><img src="pas foto.jpg" alt="Pas foto" width="10%"></p>
     
-        <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">BIODATA</h2>
+        <h2 style="color: darkblue;">BIODATA</h2>
         <ul style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:black; text-align: justify;">
             <li>Nama Lengkap: Inggit Yeira Budi Agranata</li>
             <li>Tempat, Tanggal Lahir: Sukabumi, 22 Mei 2003</li>
@@ -18,7 +36,7 @@
         </ul>
     </header>
 
-    <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">RIWAYAT PENDIDIKAN</h2>
+    <h2 style="color: darkred;">RIWAYAT PENDIDIKAN</h2>
     <table border="1px", style="font-family: 'Times New Roman', Times, serif; font-size: 15px; width: 80%; text-align: center; margin-left: 10%; margin-right: 10%;">
         <tr style="background-color: lightblue;">
             <th>Instansi</th>
@@ -39,7 +57,7 @@
         </tr>
     </table>
 
-    <h2 style="font-family: 'Times New Roman', Times, serif; font-size: 30px; color: darkblue;">PARAGRAF KARAKTER</h2>
-    <p style="font-family: 'Times New Roman', Times, serif; font-size: 15px; color:black; text-align: justify; width: 95%;">Saya berdedikasi untuk selalu memprioritaskan akademik serta sangat berambisi dalam mengejar prestasi-prestasi akademik, disamping itu juga saya sangat menyukai kerja sama tim, berbagai organisasi dan kepanitiaan aktif diikuti, saya juga dapat menempatkan diri baik sebagai pemimpin ataupun menjadi anggota yang dipimpin. Maka, dengan menggabungkan semangakt akademik dan keterampilan kerja sama tim yang telah saya kembangkan, saya berharap dapat berkontribusi untuk Telkom University</p>
+    <h2 style="color: darkblue;">PARAGRAF KARAKTER</h2>
+    <p style="width: 95%;">Saya berdedikasi untuk selalu memprioritaskan akademik serta sangat berambisi dalam mengejar prestasi-prestasi akademik, disamping itu juga saya sangat menyukai kerja sama tim, berbagai organisasi dan kepanitiaan aktif diikuti, saya juga dapat menempatkan diri baik sebagai pemimpin ataupun menjadi anggota yang dipimpin. Maka, dengan menggabungkan semangakt akademik dan keterampilan kerja sama tim yang telah saya kembangkan, saya berharap dapat berkontribusi untuk Telkom University</p>
 </body>
 </html>
